<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/back_ground">

        <LinearLayout
            android:id="@+id/viewpager_word"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewpager_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/search_main"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewpager_text1_bottom"
                android:layout_width="match_parent"
                android:layout_height="12dp"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewpager_sentence"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewpager_text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/sentence_main"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewpager_text2_bottom"
                android:layout_width="match_parent"
                android:layout_height="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewpager_listbook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewpager_text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/listbook_main"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewpager_text3_bottom"
                android:layout_width="match_parent"
                android:layout_height="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewpager_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewpager_text4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/settings_main"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewpager_text4_bottom"
                android:layout_width="match_parent"
                android:layout_height="12dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </android.support.v4.view.ViewPager>
    </LinearLayout>

</LinearLayout>