<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:id="@+id/language_line"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/language_text"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/sentence_auto"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/cut_line" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/sentence_main"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/search_arrow" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/sententce_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:hint="@string/edit_your_word"
                android:maxLength="500"
                android:maxLines="8"
                android:padding="10dp"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
            <ImageButton
                android:id="@+id/sentence_clear_edit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/clear_sentence_text"
                android:visibility="visible" />

        </RelativeLayout>


    </LinearLayout>

    <ScrollView
        android:id="@+id/sentence_sco"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/inter_lay"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_bg"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="译文"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/sententce_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:textColor="@color/text_color"
                android:textSize="15sp" />


            <LinearLayout
                android:id="@+id/web_sentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="更多释义"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/sentence_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>